--- a/ui/web/media/css/main.css
+++ b/ui/web/media/css/main.css
@@ -1,67 +1,115 @@
 body {
-	background-color: #F8F8F8;
-	color : #000;
-	margin: 0px;
-	text-align: center;
+    background-color: #F7F7F7;
+    margin: 0px;
 }
 
-#page {
-	background-color: #F8F8F8;
-	text-align: left;
-	margin:0px auto;
-	padding: 15px;
-	width: 800px;
-	font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-	width: 800px;
-	text-align: center;
+h1 {
+    text-align: left;
 }
 
-#login {
-	border: 6px solid #999;
-	width: 500px;
-	margin: auto;
-	background-color: white;
+#bus_header {
+    text-align: center;
 }
 
-#login legend {
-	font-size: 36px;
-	font-weight: bold;
+div {
+    vertial-align: middle;
 }
 
-#login .input {
-	font-family: Verdana,Arial,Helvetica,Geneva,sans-serif;
-	font-size:18px;
-	padding:2px;
-	color: green;
+#header {
+    vertical-align: middle;
+    padding: 10px 0px;
+    background-color: #E4EBF7;
+    height: 75px;
 }
 
-#login .label {
-	font-size: 18px;
+
+#content {
+    background-color: #E4EBF7;
+    height: 500px;
+    padding: 10px 10px;
 }
 
-#login .button, .button {
-	font-size: 22px;
-	height: 32px;
-	font-family: "Helvetica Neue",Arial,Helvetica,Geneva,sans-serif;
-	/*font:bold 100% "Helvetica Neue",Arial,Helvetica,Geneva,sans-serif;*/
-	-webkit-appearance:button;
+select {
+    width: 150px;
 }
 
-.login_table_left {
+.col {
+    height:300px;
+    text-align: center;
 }
 
-.hint {
-	font-size: 80%;
-	color: #999;
+.border-r {
+    border-style:solid;
+    border-width:0px 1px 0px 0px;
 }
 
-.whitelist {
-	width: 500px;
-	margin: auto;
-	background-color: white;
-	margin-top: -50px;
-	margin-bottom: 20px;
-	padding: 10px;
-	border: 1px solid #999;
+.rounded {
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
 }
 
+.rounded-top {
+    border-radius: 10px 10px 0px 0px;
+    -moz-border-radius: 10px 10px 0px 0px;
+    -webkit-border-top-right-radius: 10px;
+    -webkit-border-top-left-radius: 10px;
+}
+
+.rounded-bottom {
+    border-radius:  0px 0px 10px 10px;
+    -moz-border-radius: 0px 0px 10px 10px;
+    -webkit-border-bottom-right-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+}
+
+.overlay{
+    background: black;
+    filter:alpha(opacity=60);
+    opacity:.6;
+    position:fixed;
+    top:0px;
+    bottom:0px;
+    left:0px;
+    right:0px;
+    z-index:100;
+}
+
+.box{
+    position:fixed;
+    top:-200px;
+    left:30%;
+    right:30%;
+    background-color:#fff;
+    color:#7F7F7F;
+    padding:20px;
+    border:2px solid #000; /*ccc;*/
+    -moz-border-radius: 20px;
+    -webkit-border-radius:20px;
+    -khtml-border-radius:20px;
+    -moz-box-shadow: 0 1px 5px #333;
+    -webkit-box-shadow: 0 1px 5px #333;
+    z-index:101;
+}
+
+a.boxclose{
+    float:right;
+    width:26px;
+    height:26px;
+    background:transparent #ccc;
+    margin-top:-30px;
+    margin-right:-30px;
+    cursor:pointer;
+}
+
+.box h1{
+    margin:-20px -20px 0px -20px;
+    padding:10px;
+    font-size: medium;
+
+    -moz-border-radius:20px 20px 0px 0px;
+    -webkit-border-top-left-radius: 20px;
+    -webkit-border-top-right-radius: 20px;
+    -khtml-border-top-left-radius: 20px;
+    -khtml-border-top-right-radius: 20px;
+}
