--- a/ui/viz/main.css
+++ b/ui/viz/main.css
@@ -1,3 +1,16 @@
+.timesel {
+    width: 100px;
+}
+
+.histtitle {
+
+}
+
+#historic_holder {
+    margin-left: 240px;
+    margin-top: 100px;
+}
+
 #est {
     width: 100%;
     border-spacing: 0px;
@@ -8,6 +21,11 @@
     margin: 5%;
 }
     
+
+#history_graph {
+    height: 300px;
+    width: 660px;
+}
 
 td {
     text-align: center;
@@ -156,7 +174,7 @@ h1 {
 	left: 25%;
 	width: 50%;
 	height: 50%;
-	padding: 16px;
+	padding: 4px;
 	border: 16px solid orange;
 	background-color: white;
 	z-index:1002;
