--- a/ui/viz/main.css
+++ b/ui/viz/main.css
@@ -22,7 +22,7 @@
 
 .centering {
     width: 90%;
-    margin: 5%;
+    margin: 5px 5%;
 }
     
 
@@ -206,7 +206,7 @@ h1 {
 	font-family:arial;
 	font-size:15px;
 	font-weight:bold;
-	padding:6px 24px;
+	padding:2px 24px;
 	text-decoration:none;
 	text-shadow:1px 1px 0px #ffffff;
 }.button:hover {
